src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Advancement</fullName>
        <description>The process for fund-raising</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Applicant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Admit</fullName>
        </values>
        <values>
            <fullName>Admitted</fullName>
        </values>
        <values>
            <fullName>Applicant</fullName>
        </values>
        <values>
            <fullName>Application Started</fullName>
        </values>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Confirmed</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inquiry</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Applicant</fullName>
        </values>
        <values>
            <fullName>Application Started</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Inquired</fullName>
        </values>
        <values>
            <fullName>Inquiry</fullName>
        </values>
        <values>
            <fullName>No Longer Interested</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The official plan or program the individual applies for. A lookup to Program with a filter criteria of Record Type = Academic Program.</description>
        <inlineHelpText>The official plan or program the individual applies for.</inlineHelpText>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities with Academic Program</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Academic_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to EASY Term Object</description>
        <inlineHelpText>EASY Term Object</inlineHelpText>
        <label>Academic Term</label>
        <referenceTo>Academic_Term__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admit_Letter_Sent__c</fullName>
        <label>Admit Letter Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Admit_Type__c</fullName>
        <description>The category the potential applicant falls into for recruitment segmentation (Ex: New student, Transfer student, etc.)</description>
        <label>Admit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Freshman</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Transfer Student</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>Parrott Institute Certified Life Coach</fullName>
                </value>
                <value>
                    <fullName>The Salvation Army</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admitted__c</fullName>
        <description>Date and Time when student is admitted (integration piece)</description>
        <label>Admitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Advancement_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Advancement Contract custom object</description>
        <label>Advancement Contract</label>
        <referenceTo>Advancement_Contract__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with. Filtered to exclude the Administrative Account Record Type.</description>
        <inlineHelpText>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with.</inlineHelpText>
        <label>Affiliated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Affiliated Account)</relationshipLabel>
        <relationshipName>Affiliated_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Number of Days from Create to Close</description>
        <formula>IF(IsClosed = TRUE,CloseDate, TODAY()) - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Closed__c</fullName>
        <description>$Amount (Closed Opportunty Only)</description>
        <formula>IF(IsClosed = TRUE, Amount , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Amount(Closed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Lost__c</fullName>
        <description>$Amount (Closed/Lost Opportunity Only)</description>
        <formula>IF(
AND(
IsClosed = TRUE,
IsWon = FALSE),
Amount ,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Amount(Lost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Open__c</fullName>
        <description>$Amount (Open Opportunity Only)</description>
        <formula>IF(IsClosed = FALSE, Amount , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Amount(Open)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <description>$Amount (Closed/Won Opportunity Only)</description>
        <formula>IF(IsWon = TRUE, Amount , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Amount(Won)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>The external ID used by the application collection tool or database for matching to Applicant Opportunities. Only displays on the Applicant Opportunity page layout.</description>
        <inlineHelpText>The external ID used by the application collection tool or database for matching to Applicant Opportunities.</inlineHelpText>
        <label>Application Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_Date__c</fullName>
        <description>A date stamp (set by the Opportunity: Set Application Submitted Date workflow rule) to record when an Opportunity is converted from an Inquiry to an Applicant record type.</description>
        <inlineHelpText>The date when the Opportunity was converted from an Inquiry to an Applicant record type.</inlineHelpText>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the EASY Application object</description>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>Date when the opportunity was assigned</description>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Award_Letter_Sent__c</fullName>
        <label>Award Letter Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Award_Letter_Signed__c</fullName>
        <label>Award Letter Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Award_Letter_Web_Accept__c</fullName>
        <label>Award Letter Web Accept</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Budget_1__c</fullName>
        <label>Budget 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_2__c</fullName>
        <label>Budget 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_3__c</fullName>
        <label>Budget 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>Returns the Career from the Academic Program if there is one, otherwise it returns the Career from the Recruitment Program if there is one. Used in building the Opportunity Key for the Interaction Processor to determine whether to create a new Opportunity or update an existing Opportunity.</description>
        <formula>/*If an Academic Program exists for the Opportunity, retrieve the associated Career from the Academic Program Account*/
IF(NOT(ISBLANK(Academic_Program__c)),TEXT(Academic_Program__r.Career__c),

/*IF not, retrieve the associated Career from the Recruitment Program Account on the Opportunity*/
TEXT(Recruitment_Program__r.Career__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Career</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate_Current_Month__c</fullName>
        <description>CloseDate Month of the Year = Current Month</description>
        <formula>MONTH(CloseDate) = MONTH(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CloseDate = Current Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloseDate_Day_TODAY__c</fullName>
        <description>Close Date Day of the Month &lt;= Current Day of the Month</description>
        <formula>DAY(CloseDate) &lt;= DAY(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CloseDate(Day) &lt;= TODAY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_MTD__c</fullName>
        <description>Close Date Month of the Year &lt;= Current Month of the Year</description>
        <formula>MONTH( CloseDate )
&lt;=
MONTH( TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date (MTD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_Quarter__c</fullName>
        <description>Close Date Quarter of the Year (without Year)</description>
        <formula>&quot;Q&quot;+ TEXT(CEILING(MONTH( CloseDate ) / 3 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date (Quarter)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_YTD__c</fullName>
        <description>Close Date Day of the Year &lt;= Current Day of the Year</description>
        <formula>(CloseDate - DATE(YEAR( CloseDate ), 01, 01))
&lt;=
(TODAY() - DATE(YEAR( TODAY()), 01,01))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date (YTD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <label>Confirmed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Connects this Opportunity to a Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <description>Current $Amount</description>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Close_Date__c</fullName>
        <description>Current Close Date</description>
        <formula>CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Probability__c</fullName>
        <description>Current Probability%</description>
        <formula>Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Probability%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <description>Current Stage</description>
        <formula>TEXT(StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Close__c</fullName>
        <description>Days Since Opportunity Close Date</description>
        <formula>IF(CloseDate &gt; TODAY(),
NULL,
TODAY() - CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Close__c</fullName>
        <description>Days Until Opportunity Close Date</description>
        <formula>IF(IsClosed = TRUE, NULL,
CloseDate - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferment_Agreement_Received__c</fullName>
        <label>Deferment Agreement Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deferment_Agreement_Sent__c</fullName>
        <label>Deferment Agreement Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denial_Letter_Sent__c</fullName>
        <label>Denial Letter Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Returns the Department from the Academic Program if there is one, otherwise it returns the Department from the Recruitment Program if there is one.</description>
        <formula>/*If an Academic Program exists for the Opportunity, retrieve the associated School/College from the Academic Program Account*/
IF(NOT(ISBLANK(Academic_Program__c)),(  Academic_Program__r.Department__r.Name  ),

/*IF not, retrieve the associated School/College from the Recruitment Program Account on the Opportunity*/
(  Recruitment_Program__r.Department__r.Name  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>$1,000</fullName>
                </value>
                <value>
                    <fullName>$2,000</fullName>
                </value>
                <value>
                    <fullName>$3,000</fullName>
                </value>
                <value>
                    <fullName>$4,000</fullName>
                </value>
                <value>
                    <fullName>$5,000</fullName>
                </value>
                <value>
                    <fullName>$6,000</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Notes__c</fullName>
        <label>Discount Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor</label>
        <referenceTo>Donor__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Sent_to_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent to Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled__c</fullName>
        <label>Enrolled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entry_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entry Term</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Periods</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue__c</fullName>
        <label>Estimated Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Review_Date__c</fullName>
        <label>Estimated Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FAFSA_Received__c</fullName>
        <label>FAFSA Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FOS_Received__c</fullName>
        <label>FOS Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FOS_Sent__c</fullName>
        <label>FOS Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finance_Report_Name__c</fullName>
        <formula>Account.Finance_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financially_Complete__c</fullName>
        <label>Financially Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Inquiry_Source__c</fullName>
        <description>Captures the first lead source when the opportunity record is created. This is set by the Opportunity: Set First Inquiry Source workflow rule.</description>
        <inlineHelpText>The first Lead Source of the Opportunity.</inlineHelpText>
        <label>First Inquiry Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Recruitment_Program__c</fullName>
        <description>Captures the first Recruitment Program when the Opportunity record is created. This is set by the Opportunity: Set First Recruitment Program workflow rule.</description>
        <inlineHelpText>The first Recruitment Program on the Opportunity.</inlineHelpText>
        <label>First Recruitment Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funnel_Stage__c</fullName>
        <label>Funnel Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAU_Concatenation__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAU Concatenation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAU_Type__c</fullName>
        <label>GAU Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Frequency__c</fullName>
        <description>maps to Giving: Giving Frequency in AC Detail/Batch Upload</description>
        <label>Giving Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Payment</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Giving_General_Accounting_Unit_1__c</fullName>
        <label>Giving: General Accounting Unit 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_General_Accounting_Unit_2__c</fullName>
        <label>Giving: General Accounting Unit 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_General_Accounting_Unit_3__c</fullName>
        <label>Giving: General Accounting Unit 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us_Other__c</fullName>
        <label>How Did You Hear About Us? (Other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online Search</fullName>
                </value>
                <value>
                    <fullName>Online Ad</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Local Resident</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Pandora</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>ONU Rep / Recruiter</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Employer Partnership</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <description>A date stamp (set by the Opportunity: Set Inquiry Date workflow rule) to capture when an Opportunity is created.</description>
        <inlineHelpText>The date when the Opportunity was created.</inlineHelpText>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry__c</fullName>
        <label>Inquiry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsLost__c</fullName>
        <description>Hint: If it is Closed but it&apos;s not Won, it&apos;s ____?</description>
        <formula>AND(IsClosed = TRUE,IsWon = FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOpen__c</fullName>
        <description>Hint: It&apos;s the opposite of Closed</description>
        <formula>IsClosed = FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lapsed__c</fullName>
        <description>Open Opportunity with Lapsed Close Date</description>
        <formula>AND(
IsClosed = FALSE ,
CloseDate &lt; TODAY()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities from Latest Campaign Source</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Entrance_Counseling__c</fullName>
        <label>Loan Entrance Counseling</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_Complete__c</fullName>
        <label>Marked Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Master_Promissory_Note__c</fullName>
        <label>Master Promissory Note</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <label>Migration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Recruit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Moved_to_ERP__c</fullName>
        <label>Moved to ERP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Needs_new_GAU__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check this box to request that a new GAU be created</inlineHelpText>
        <label>Needs new GAU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ONU_FA_Application__c</fullName>
        <label>ONU FA Application</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Key__c</fullName>
        <description>A unique external ID text field which determines whether an Interaction will create a new Opportunity or edit an existing Opportunity. Built using the Contact’s 18-digit ID, Career, Term’s 15-digit ID, and Recruitment/Academic Program’s 15-digit ID (if applicable) to ensure uniqueness and support of both a central and decentral recruitment process. Set by the Interactions Processor.</description>
        <externalId>true</externalId>
        <label>Opportunity Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>It&apos;s the Power of One (you&apos;re welcome!)</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pwned!</inlineHelpText>
        <label>Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains a reference to SOURCE opportunity: ONU-222</description>
        <inlineHelpText>Contains a reference to SOURCE opportunity: ONU-222</inlineHelpText>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>HistoricalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>